# alipay-bot

./: .gitignore  .replit  PYTHONANYWHERE_SETUP.md  Procfile  README.md  bot.py  bot_commands.py  bot_tutorial.py  chapa_autopay.py  chapa_payment.py  chapa_payment_verifier.py  chapa_webhook  chapa_webhook.py  check_db.py  check_telegram_setup.py  clean_locks.py  clear_database.py  companion_config.py  convert_svg_to_png.py  create_full_zip.py  database.py  debug_telegram.py  digital_companion.py  fix_database.py  fix_database_schema.py  forever.py  git_setup.sh  groq_api.py  keep_alive.py  keep_alive_endpoint.py  models.py  monitor_bot.py  monitor_performance.py  payment_notifier.py  pyproject.toml  recreate_database.py  referral_system.py  refferral_system.py  requirements.txt  restart_deployment.py  (+20 more)
